<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/app_name">
<!-- ace - color features not supported on SGH-I927
    <PreferenceCategory
            android:title="@string/screen_colors_title">
    </PreferenceCategory> -->

    <!-- Touchscreen -->
    <PreferenceCategory
            android:title="@string/touchscreen_subcat_title">
        <com.cyanogenmod.settings.device.TouchscreenSensitivity
                android:key="touchscreen_sensitivity"
                android:title="@string/touchscreen_sensitivity_title_head"
                android:summary="@string/touchscreen_sensitivity_summary_head"
                android:entries="@array/touchscreen_sensitivity_entries"
                android:entryValues="@array/touchscreen_sensitivity_entries_values"
                android:defaultValue="50" />
    </PreferenceCategory>

    <!-- Touchkeys -->
    <PreferenceCategory
            android:title="@string/touchkey_subcat_title">
        <CheckBoxPreference
                android:key="touchkey_light"
                android:title="@string/touchkey_light_title_head"
                android:summary="@string/touchkey_light_summary_head"
                android:defaultValue="true" />
        <com.cyanogenmod.settings.device.TouchkeyTimeout
                android:key="touchkey_timeout"
                android:title="@string/touchkey_timeout_title_head"
                android:summary="@string/touchkey_timeout_summary_head"
                android:entries="@array/touchkey_timeout_entries"
                android:entryValues="@array/touchkey_timeout_entries_values"
                android:defaultValue="3" />
    </PreferenceCategory>

</PreferenceScreen>
